# bevy_log_events

./: CHANGELOG.md  Cargo.toml  README.md
assets/: observers.ron  simple.ron  window.ron
examples/: observers.rs  simple.rs  window.rs
examples/plugins/: bar.rs  baz.rs  mod.rs
src/: editor_window.rs  lib.rs  settings_window.rs  systems.rs  utils.rs
