[package]
name = "bevy_log_events"
version = "0.3.0"
edition = "2021"
description = "A Bevy plugin that log events."
repository = "https://github.com/YellowWaitt/bevy_log_events"
license = "MIT OR Apache-2.0"
keywords = ["bevy", "log"]
categories = ["game-development"]
exclude = ["assets/", "examples/"]
readme = "README.md"

[features]
default = ["enabled"]
enabled = ["dep:ron", "dep:serde"]
editor_window = ["dep:bevy_editor_pls", "dep:regex"]

[dependencies]
bevy = { version = "0.14", default-features = false }
bevy_editor_pls = { version = "0.9", optional = true }
regex = { version = "1", optional = true }
ron = { version = "0.8", optional = true }
serde = { version = "1", optional = true }

[dev-dependencies]
bevy = "0.14"
bevy_editor_pls = "0.9"
rand = "0.8.5"
rand_chacha = "0.3.1"

[[example]]
name = "simple"
path = "examples/simple.rs"

[[example]]
name = "window"
path = "examples/window.rs"
required-features = ["editor_window"]

[[example]]
name = "observers"
path = "examples/observers.rs"
required-features = ["editor_window"]
