[package]
name = "bevy_log_events"
version = "0.4.1"
edition = "2021"
description = "A Bevy plugin that helps to log events."
repository = "https://github.com/YellowWaitt/bevy_log_events"
license = "MIT OR Apache-2.0"
keywords = ["bevy", "log"]
categories = ["game-development"]
exclude = ["assets/", "examples/"]
readme = "README.md"

[features]
default = ["enabled"]
enabled = ["dep:ron", "dep:serde", "dep:bevy_egui", "dep:regex"]
editor_window = []

[dependencies]
bevy = { version = "0.15", default-features = false, features = ["bevy_state"] }
bevy_egui = { version = "0.31", optional = true }
regex = { version = "1", optional = true }
ron = { version = "0.8", optional = true }
serde = { version = "1", optional = true }

[dev-dependencies]
bevy = "0.15"
rand = "0.8.5"
rand_chacha = "0.3.1"

[[example]]
name = "simple"
path = "examples/simple.rs"

[[example]]
name = "window"
path = "examples/window.rs"

[[example]]
name = "observers"
path = "examples/observers.rs"
