[package]
name = "bevy_log_events"
version = "0.5.0"
edition = "2021"
description = "A Bevy plugin that helps to log events."
repository = "https://github.com/YellowWaitt/bevy_log_events"
license = "MIT OR Apache-2.0"
keywords = ["bevy", "log"]
categories = ["game-development"]
exclude = ["assets/", "examples/"]
readme = "README.md"

[features]
default = ["enabled"]
enabled = ["dep:ron", "dep:serde", "dep:bevy_egui", "dep:regex", "dep:bitflags"]

[dependencies]
bevy = { version = "0.16", default-features = false, features = [
    "bevy_log",
    "bevy_state",
    "bevy_window",
] }
bevy_egui = { version = "0.34", optional = true }
bitflags = { version = "2.9", optional = true }
regex = { version = "1", optional = true }
ron = { version = "0.10", optional = true }
serde = { version = "1", optional = true }

[dev-dependencies]
bevy = "0.16"
rand = "0.9"
rand_chacha = "0.9"

[package.metadata.docs.rs]
features = ["bevy/x11"]
rustc-args = ["--cfg", "docsrs_dep"]
rustdoc-args = [
    "--cfg",
    "docsrs_dep",
    "--html-after-content",
    "docs-rs/trait-tags.html",
]

[[example]]
name = "simple"
path = "examples/simple.rs"

[[example]]
name = "window"
path = "examples/window.rs"

[[example]]
name = "observers"
path = "examples/observers.rs"
